// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderMenu renders when logged in 1`] = `
<Menu
  className="__HeaderMenu__"
  mode="horizontal"
  selectable={false}
  theme="dark"
>
  <MenuItem
    key="search-tips"
  >
    <ExternalLink
      as="a"
      href="https://labs.inspirehep.net/help/knowledge-base/inspire-paper-search"
    >
      Search Tips
    </ExternalLink>
  </MenuItem>
  <SubMenu
    key="submit"
    title="Submit"
  >
    <MenuItem
      key="submit.author"
    >
      <Link
        to="/submissions/authors"
      >
        Author
      </Link>
    </MenuItem>
    <MenuItem
      key="submit.job"
    >
      <Link
        to="/submissions/jobs"
      >
        Job
      </Link>
    </MenuItem>
    <MenuItem
      key="submit.literature"
    >
      <Link
        to="/submissions/literature"
      >
        Literature
      </Link>
    </MenuItem>
    <MenuItem
      key="submit.conference"
    >
      <Link
        to="/submissions/conferences"
      >
        Conference
      </Link>
    </MenuItem>
  </SubMenu>
  <MenuItem
    key="login-logout"
  >
    <LinkLikeButton
      dataTestId="logout"
      onClick={[MockFunction]}
    >
      Logout
    </LinkLikeButton>
  </MenuItem>
</Menu>
`;

exports[`HeaderMenu renders when not logged in 1`] = `
<Menu
  className="__HeaderMenu__"
  mode="horizontal"
  selectable={false}
  theme="dark"
>
  <MenuItem
    key="search-tips"
  >
    <ExternalLink
      as="a"
      href="https://labs.inspirehep.net/help/knowledge-base/inspire-paper-search"
    >
      Search Tips
    </ExternalLink>
  </MenuItem>
  <SubMenu
    key="submit"
    title="Submit"
  >
    <MenuItem
      key="submit.author"
    >
      <Link
        to="/submissions/authors"
      >
        Author
      </Link>
    </MenuItem>
    <MenuItem
      key="submit.job"
    >
      <Link
        to="/submissions/jobs"
      >
        Job
      </Link>
    </MenuItem>
    <MenuItem
      key="submit.literature"
    >
      <Link
        to="/submissions/literature"
      >
        Literature
      </Link>
    </MenuItem>
    <MenuItem
      key="submit.conference"
    >
      <Link
        to="/submissions/conferences"
      >
        Conference
      </Link>
    </MenuItem>
  </SubMenu>
  <MenuItem
    key="login-logout"
  >
    <Link
      to="/user/login"
    >
      Login
    </Link>
  </MenuItem>
</Menu>
`;
